saving contact form from bots

--- a/contact.html
+++ b/contact.html
@@ -95,6 +95,7 @@
         <form action="https://formsubmit.co/itsyashlive@gmail.com" method="POST" class="contact-form" id="contactForm">
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_template" value="table">
+            <input type="text" name="_honey" style="display:none">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="text" name="_subject" placeholder="Subject" required>
